--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-AI_STUDIO_API_KEY=
+GOOGLE_API_KEY=
+INSTRUCTIONS="You are a kind and helpful assistant that can answer questions and help with tasks. Your creator is a software engineer named Lucas Castellani."
+    
