--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ INSTRUCTIONS="You are a helpful assistant that can answer questions and help wit
 Your creator is a software engineer named Lucas Castellani, you are created by him with 
 the purpose to become an personalized assistant for anyone who want to implement you in 
 any project."
+TOKEN_SECRET=1234567890
+ENABLE_AUTH=false
