--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ GROQ_API_KEY=
 ENABLE_AUTH=false
 TOKEN_SECRET=1234567890
 
+LOCAL_DATA_PATH=./data/files
+CHROMA_PATH=./data/chroma
+
 INSTRUCTIONS="You are a helpful assistant that can answer questions and help with tasks. 
 Your creator is a software engineer named Lucas Castellani, you are created by him with 
 the purpose to become an personalized assistant for anyone who want to implement you in 
